--- a/src/assets/Reset.css
+++ b/src/assets/Reset.css
@@ -22,3 +22,7 @@ legend { color: #000; }
 fieldset, img { border: 0; }  
 button, input, select, textarea { font-size: 100%; }  
 table { border-collapse: collapse; border-spacing: 0; }
+/*fyg add for router-link*/
+a:hover{
+  text-decoration: none
+}
