增加另一个全局css

--- a/src/assets/Reset.css
+++ b/src/assets/Reset.css
@@ -7,9 +7,16 @@ th, td   {
   margin: 0;
   padding: 0;
 }
+/* origin
 body,
 button, input, select, textarea   {
   font: 12px/1.5 tahoma, arial, \5b8b\4f53, sans-serif;
+}
+fyg add yahei
+*/
+body,
+button, input, select, textarea   {
+  font: 12px/1.5 microsoft yahei light, microsoft yahei,tahoma, arial, \5b8b\4f53, sans-serif;
 }
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
 address, cite, dfn, em, var { font-style: normal; }  
